--- a/.github/workflows/identity-api.yml
+++ b/.github/workflows/identity-api.yml
@@ -18,9 +18,8 @@ env:
   DOTNET_VERSION: 5.0.x
 
 jobs:
-  BuildForPR:
+  Build:
     runs-on: ubuntu-latest
-    if: ${{ github.event_name == 'pull_request' }}
     steps:
     - name: 'Checkout Github Action'
       uses: actions/checkout@main
