--- a/.github/workflows/identity-api.yml
+++ b/.github/workflows/identity-api.yml
@@ -29,8 +29,10 @@ jobs:
       with:
         dotnet-version: ${{ env.DOTNET_VERSION }}
         
-    - name: Build and run unit tests
+    - name: Build
       run: |
         cd identity_service
         dotnet restore "identity_service.sln"
+        dotnet build "identity_service.sln"
+        
         
