--- a/.github/workflows/identity-api.yml
+++ b/.github/workflows/identity-api.yml
@@ -29,9 +29,14 @@ jobs:
       with:
         dotnet-version: ${{ env.DOTNET_VERSION }}
         
-    - name: Build
+    - name: Install Docker
       run: |
-        docker-compose up --build
-        
+          sudo apt-get update
+          sudo apt-get install -y docker.io
+          sudo apt-get install -y docker-compose
+    
+    - name: Run docker-compose
+        run: |
+          docker-compose up --build
         
         
