--- a/.github/workflows/identity-api.yml
+++ b/.github/workflows/identity-api.yml
@@ -18,7 +18,8 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version }}
-      - run: npm install
+      - run: cd frontend |
+            npm install
       - run: npm run build --if-present
       - run: npm test
     
