--- a/.github/workflows/identity-api.yml
+++ b/.github/workflows/identity-api.yml
@@ -13,11 +13,15 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v1
+      - name: Checkout code
+        uses: actions/checkout@v2
+      
+      # Install dependencies and build frontend
+      - name: Install Node.js
+        uses: actions/setup-node@v2
         with:
-          node-version: ${{ matrix.node-version }}
+          node-version: '14'
+      - name: Install dependencies and build frontend
         run: |
             cd frontend
             npm install
