--- a/.github/workflows/identity-api.yml
+++ b/.github/workflows/identity-api.yml
@@ -11,11 +11,12 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-
+    env:
+      CI: false
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-      
+
       # Install dependencies and build frontend
       - name: Install Node.js
         uses: actions/setup-node@v2
