--- a/.github/workflows/identity-api.yml
+++ b/.github/workflows/identity-api.yml
@@ -10,7 +10,7 @@ on:
 
 jobs:
   build:
-    runs-on: DESKTOP-IFE360H
+    runs-on: self-hosted
     env:
       CI: false
       DOTNET_VERSION: 8.0.x
