--- a/.github/workflows/identity-api.yml
+++ b/.github/workflows/identity-api.yml
@@ -29,3 +29,12 @@ jobs:
           cd identity_service
           dotnet restore "identity_service.sln"
           dotnet build
+
+      - name: Analysis identity_service
+        run: |
+          cd identity_service
+          dotnet sonarscanner begin /k:"s" /d:sonar.host.url="http://localhost:9000"  /d:sonar.login="sqp_7e41542d45d877fe2a7214b54705df71f6b33e64"
+          dotnet build
+          dotnet sonarscanner end /d:sonar.login="sqp_7e41542d45d877fe2a7214b54705df71f6b33e64"
+
+        
